# manifest

./: .gitignore  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml
api/: Cargo.toml  projects.example.toml  projects.toml
api/src/: anomaly.rs  auth.rs  classify.rs  cost.rs  inventory.rs  lib.rs  main.rs  registry.rs  state.rs
deploy/: Dockerfile  README.md  bootstrap.sh  deploy-in-container.sh
infra/: .env.example  cdk.json  package.json  tsconfig.json
infra/assets/lambda-placeholder/: bootstrap
infra/assets/web-placeholder/: index.html
infra/lib/: ci-stack.ts  config.ts  manifest-stack.ts  member-stack.ts  region-index-stack.ts
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: api.ts  charts.tsx  config.ts  index.css  main.tsx  router.tsx
web/src/components/: ui.tsx
web/src/lib/: console.ts  useAsync.ts  utils.ts
web/src/routes/: cost.tsx  inventory.tsx  overview.tsx
