[package]
name = "manifest-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "manifest-api"
path = "src/main.rs"

[dependencies]
lambda_http = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-costexplorer = "1"
aws-sdk-resourceexplorer2 = "1"
aws-sdk-dynamodb = "1"
aws-sdk-organizations = "1"
aws-sdk-acm = "1"
aws-sdk-resourcegroupstagging = "1"
aws-smithy-types = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
thiserror = "2"
toml_edit = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
